# PythonWeb

./: .gitignore  README.md  alembic.ini  db_output.txt  pyproject.toml  requirements.txt  server_log3.txt  start_server.bat
.codebuddy/memory/: 2026-07-18.md
app/: crud.py  models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 0001_initial.py
app/core/: config.py
db/: generate_data_sql.py  init_all.sql  init_data.sql  schema.sql
scripts/: start.bat  start.sh
tests/: conftest.py  test_health.py  test_items.py  test_login.py  test_private.py  test_users.py
