[project]
name = "pythonweb"
version = "0.1.0"
description = "PythonWeb - Monolithic FastAPI Web Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.27",
    "email-validator>=2.1.0.post1",
    "tenacity>=8.2.3",
    "pydantic>2.0",
    "emails>=1.1.2",
    "jinja2>=3.1.4",
    "alembic>=1.12.1",
    "httpx>=0.25.1",
    "psycopg[binary]>=3.1.13",
    "sqlmodel>=0.0.39",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.13.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fastapi]
entrypoint = "app.main:app"
